Fix CSS files spacing

--- a/zeppelin-web/src/app/home/home.css
+++ b/zeppelin-web/src/app/home/home.css
@@ -17,7 +17,10 @@ body {
   color: #212121;
 }
 
-html,body { height: 100%;}
+html,
+body {
+  height: 100%;
+}
 
 .bodyAsIframe {
   background: white;
@@ -31,6 +34,7 @@ html,body { height: 100%;}
 body.asIframe {
   padding-top: 0px;
 }
+
 body .navbar {
   margin-bottom: 0px;
 }
@@ -50,16 +54,20 @@ body .navbar {
   font-size: 18px;
 }
 
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
   color: #fff;
   background-color: #3071a9;
 }
 
-.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
+.navbar-inverse .navbar-toggle:hover,
+.navbar-inverse .navbar-toggle:focus {
   background-color: #3071a9;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.2);
 
@@ -69,7 +77,9 @@ body .navbar {
   border-color: #FFFFFF;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus {
   color: #fff;
   background-color: #080808;
 }
@@ -99,6 +109,7 @@ a.navbar-brand:hover {
   color: #333;
   white-space: nowrap;
 }
+
 .dropdown-menu > .scrollbar-container > li > a:hover,
 .dropdown-menu > .scrollbar-container > li > a:focus {
   color: #262626;
@@ -166,7 +177,7 @@ a.navbar-brand:hover {
 }
 
 .server-status {
-  font-size:12px;
+  font-size: 12px;
   margin-top: 6px;
 }
 
@@ -184,7 +195,7 @@ a.navbar-brand:hover {
 /**
  * Box and well
  */
-.box{
+.box {
   border-style: solid;
   min-height: 20px;
   padding: 10px;
@@ -201,8 +212,8 @@ a.navbar-brand:hover {
   box-shadow: none;
 }
 
-.box-heading{
-  position:relative;
+.box-heading {
+  position: relative;
   max-width: 100%;
   font-weight:300;
   white-space: nowrap;
@@ -211,22 +222,14 @@ a.navbar-brand:hover {
   margin: 0 0 15px;
   padding-bottom: 2px;
 }
-/**
-h1.box-heading,
-h2.box-heading,
-h3.box-heading,
-h4.box-heading,
-h5.box-heading,
-h6.box-heading{
-  font-size: 20px;
-}*/
+
 .box-heading > .btn-group,
-.box-heading > .btn{
+.box-heading > .btn {
   margin-top: -3px;
 }
 
 
-.icheck-label{
+.icheck-label {
   position: relative;
   top: 0;
 }
@@ -309,5 +312,5 @@ This part should be removed when new version of bootstrap handles this issue.
 */
 .btn-group > .tooltip + .btn,
 .btn-group > .popover + .btn {
-  margin-left:-1px;
+  margin-left: -1px;
 }
